--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ tokio-core = "0.1"
 serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
+iota-curl = { git = "https://github.com/iotaledger/iota.rs", rev = "2be8c70" }
+iota-models = { git = "https://github.com/iotaledger/iota.rs", rev = "2be8c70" }
+iota-trytes = { git = "https://github.com/iotaledger/iota.rs", rev = "2be8c70", features = ["alloc"] }
