--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,10 @@ tokio-core = "0.1"
 serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
+rpassword = "1.0.0"
+
 iota-curl = { git = "https://github.com/iotaledger/iota.rs", rev = "2be8c70" }
+iota-curl-cpu = { git = "https://github.com/iotaledger/iota.rs", rev = "2be8c70" }
+iota-sign = { git = "https://github.com/iotaledger/iota.rs", rev = "2be8c70" }
 iota-models = { git = "https://github.com/iotaledger/iota.rs", rev = "2be8c70" }
 iota-trytes = { git = "https://github.com/iotaledger/iota.rs", rev = "2be8c70", features = ["alloc"] }
-rpassword = "1.0.0"
